--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+# JetBrains
+.idea
+
+# Cmake
+cmake-build-debug/
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
 # Prerequisites
 *.d
 
