Task01: 01 time & 02 primes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 14)
 
 add_executable(t01-00-hello tasks/01/00-hello/main.cpp)
 add_executable(t01-00_vector tasks/01/00_vector/main.cpp tasks/01/00_vector/vector.cpp)
+add_executable(t01-quad tasks/01/quad/main.cpp)
 
 add_executable(s01-io slides/01/io/main.cpp)
 add_executable(s01-string slides/01/string/main.cpp)
