--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,30 @@
+### VS 2013
+# ayulit
+*.sln
+*.vcxproj
+*.vcxproj.filters
+Debug/
+
+# Visual C++ cache files
+ipch/
+*.aps
+*.ncb
+*.opendb
+*.opensdf
+*.sdf
+*.cachefile
+*.VC.db
+*.VC.VC.opendb
+
+# User-specific files
+*.rsuser
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+
+
 # JetBrains
 .idea
 
