04-01: Employee: Base class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(t01-00_vector tasks/01/00_vector/main.cpp tasks/01/00_vector/vect
 add_executable(t01-quad tasks/01/quad/main.cpp)
 add_executable(t01-05_mystring tasks/01/05_mystring/test.cpp tasks/01/05_mystring/mystring.cpp)
 add_executable(t01-06_date tasks/01/06_date/0106.cpp tasks/01/06_date/MyDate.cpp)
+add_executable(t04-01_employee tasks/04/employee/0401.cpp tasks/04/employee/Employee.cpp tasks/01/06_date/MyDate.cpp)
 
 add_executable(s01-io slides/01/io/main.cpp)
 add_executable(s01-string slides/01/string/main.cpp)
