Lection-06: Exceptions, Cast, Namespaces, Privacy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,6 @@ add_executable(s01-string slides/01/string/main.cpp)
 add_executable(s01-new-delete slides/01/new-delete/main.cpp)
 add_executable(s01-refs slides/01/refs/main.cpp)
 add_executable(s01-swap slides/01/swap/main.cpp)
+add_executable(s08-exceptions slides/08/exceptions.cpp)
+add_executable(s09-cast_namespace slides/09/cast_namespace.cpp)
+add_executable(s09-privacy slides/09/privacy.cpp)
